Blog, Contact Terminado

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -53,7 +53,7 @@ Start Content
           {% for obj in object_list %}
           <div class="col-md-6 pColMain">
             <div class="pCol">
-              <a href="{% url 'main:home' %}" >
+              <a href="{% url 'app_blog:blog' slug=obj.slug %}" >
               <img src="{{obj.image.url}}" alt="..." class="pImg">
               </a>
             </div>
