--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -21,7 +21,7 @@ Start Navigation Bar
                 <li><a href="{% url 'main:home'%}">Inicio</a></li>
                 <li><a href="{% url 'app_portfolio:portfolios' %}">Portfolio</a></li>
                 <li><a href="{% url 'app_blog:blogs' %}">Blog</a></li>
-                <li><a href="">Contacto</a></li>
+                <li><a href="{% url 'app_contact:contact' %}">Contacto</a></li>
                 </ul>
             </div>
             </div>
