--- a/templates/contact.html
+++ b/templates/contact.html
@@ -37,18 +37,8 @@ Start Content
       <div class="row g-4 g-md-3  align-items-center">
         <div class="col-md-6">
           <div class="bannerContent">
-            <h1 class="xlTitle pb-md-3">{{object.name|title}}</h1>
+            <h1 class="xlTitle pb-md-3">Contact us below</h1>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-auto">
-          <div class="authorCol">
-            <h4 class="smTitle pb-3">{{object.author|title}}</h4>
-          </div>
-        </div>
-        <div class="col-md">
-          <h4 class="smTitle pb-3">{{object.timestamp.date}}</h4>
         </div>
       </div>
     </div>
@@ -56,15 +46,26 @@ Start Content
 </section>
 
 <section>
-  <div class="sectionSpaceSm">
+  <div class="lightBg">
     <div class="container">
-      {{object.body|safe}}
+        <form id="contactForm" method="POST" action="/contact/">
+        {% csrf_token %}
+            <label for="name">Nombre</label>
+            {{form.name}}
+
+            <label for="email">Correo Electronico</label>
+            {{form.email}}
+
+            <label for="subject">Mensaje</label>
+            {{form.message}}
+
+            <input class='btn btnPrimary' type="submit" value="Submit">
+        </form>
     </div>
   </div>
 </section>
-
-{% endblock %}
 <!-- ================================
 End Content
 ================================= -->
-   
+{%endblock%}
+    
