--- a/templates/contact.html
+++ b/templates/contact.html
@@ -37,7 +37,7 @@ Start Content
       <div class="row g-4 g-md-3  align-items-center">
         <div class="col-md-6">
           <div class="bannerContent">
-            <h1 class="xlTitle pb-md-3">Contact us below</h1>
+            <h1 class="xlTitle pb-md-3">Contactame Aqui</h1>
           </div>
         </div>
       </div>
@@ -59,7 +59,7 @@ Start Content
             <label for="subject">Mensaje</label>
             {{form.message}}
 
-            <input class='btn btnPrimary' type="submit" value="Submit">
+            <input class='btn btnPrimary' type="submit" value="Enviar">
         </form>
     </div>
   </div>
