--- a/templates/index.html
+++ b/templates/index.html
@@ -49,10 +49,10 @@ Start Content
             <div class="bannerBtnCol">
               <div class="row">
                 <div class="col-auto">
-                  <a download href="" class="btn btnPrimary">Download Resume</a>
+                  <a download href="" class="btn btnPrimary">Descargar CV</a>
                 </div>
                 <div class="col-auto">
-                  <a href="" class="btn btnOutline">Contact</a>
+                  <a href="" class="btn btnOutline">Contacto</a>
                 </div>
               </div>
             </div>
