--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -6,10 +6,10 @@ Start Footer
     <div class="footerCol">
     <div class="container">
         <ul class="socialCol">
-        <li><a href="javascript:void(0)"><img src="{% static 'images/fb.svg' %}" alt="..."></a></li>
-        <li><a href="javascript:void(0)"><img src="{% static 'images/insta.svg' %}" alt="..."></a></li>
-        <li><a href="javascript:void(0)"><img src="{% static 'images/twitter.svg' %}" alt="..."></a></li>
-        <li><a href="javascript:void(0)"><img src="{% static 'images/linkedin.svg' %}" alt="..."></a></li>
+        <li><a href="https://www.linkedin.com/in/carlos-tapia96/"><img src="{% static 'images/linkedin.svg' %}" alt="..."></a></li>
+        <li><a href="https://github.com/carlos-tapia96"><img src="{% static 'images/gith.png' %}" alt="..."></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100016708128555"><img src="{% static 'images/fb.svg' %}" alt="..."></a></li>
+        <li><a href="https://twitter.com/JhonncarlosTap1"><img src="{% static 'images/twitter.svg' %}" alt="..."></a></li>
         </ul>
         <div class="copyrightCol">
         <p>Copyright ©{% now 'Y' %} All rights reserved. Designed by <a href="https://jamesgrangerdesign.co.uk/" target="_blank">James Granger Design</a></p>
