--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -35,7 +35,7 @@ Start Content
   <div class="innerPageBannerCol">
     <div class="container">
       <div class="row g-4 g-md-3  align-items-center">
-        <div class="col-md-6">
+        <div class="">
           <div class="bannerContent">
             <h1 class="xlTitle pb-md-3">Proyectos Personales</h1>
           </div>
