--- a/templates/index.html
+++ b/templates/index.html
@@ -49,10 +49,10 @@ Start Content
             <div class="bannerBtnCol">
               <div class="row">
                 <div class="col-auto">
-                  <a download href="" class="btn btnPrimary">Descargar CV</a>
+                  <a download href="{{me.userprofile.cv.url}}" class="btn btnPrimary">Descargar CV</a>
                 </div>
                 <div class="col-auto">
-                  <a href="" class="btn btnOutline">Contacto</a>
+                  <a href="{% url 'app_contact:contact' %}" class="btn btnOutline">Contacto</a>
                 </div>
               </div>
             </div>
@@ -171,10 +171,10 @@ Start Content
             <div class="swiper-slide">
               <div class="cardStyle1">
                 <h4 class="mdTitle cs1Title">
-                  <a href="javascript:void(0)">{{c.title}}</a>
+                  {{c.name}}
                 </h4>
                 <ul class="cardOptionCol">
-                  <a href=""><img src="{{c.image.url}}" alt="..."></a>
+                  <img src="{{c.image.url}}" alt="...">
                 </ul>
               </div>
             </div>
